--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,9 @@
 {
   "api_key": "5j0r5b7qb7kro03fvka3o8kbq262wwm",
-  "twitch_channel": "Trick2g",
+  "twitch_channel": "mrdandandan",
   "custom_name": "",
-  "offline_tagline": "Follow me on Twitter @bobdanoob",
-  "site_title": "Twitch Streamer",
+  "offline_tagline": "Follow me on Twitter @mr_dandandan",
+  "site_title": "mrdandandan.tv",
   "accent_color": "#00c2ff",
   "font_url": "https://fonts.googleapis.com/css?family=Montserrat:900",
   "brand_font": "'Montserrat', sans-serif;",
@@ -14,19 +14,19 @@
   "background_start": 60,
   "overlay_opacity": "0.8",
   "email": "",
-  "merch_link": "http://trick2g.org/merch/",
-  "donation_link": "https://streamlabs.com/trick2g",
-  "twitter": "trick2g",
-  "youtube": "trick0850",
-  "discord": "4pEjej8",
-  "facebook": "tricky2g",
+  "merch_link": "https://streamlabs.com/mrdandandan/v2/merch/",
+  "donation_link": "https://streamlabs.com/mrdandandan/v2/tip/",
+  "twitter": "mr_dandandan",
+  "youtube": "",
+  "discord": "JxTc9Gm",
+  "facebook": "",
   "instagram": "",
   "snapchat": "",
-  "steam": "",
+  "steam": "mrdandandan",
   "steamgroup": "",
   "steamtrade": "",
-  "reddit": "trick2g",
-  "github": "rmorris84",
+  "reddit": "",
+  "github": "",
   "google": "",
   "amazon": "",
   "pinterest": "",
@@ -36,7 +36,7 @@
   "tumblr": "",
   "flickr": "",
   "linkedin": "",
-  "extra_link1": "http://trick2g.org/subwars/",
+  "extra_link1": "",
   "extra_link2": "",
   "extra_link3": ""
 }
